tests/fixtures/semgrep/good/handler_signature_good.py
from constellation_node_sdk.transport.models import TransportPacket


async def handler(packet: TransportPacket) -> TransportPacket:
    return packet
