tests/fixtures/semgrep/bad/handler_signature_bad.py
def handler(packet: dict) -> dict:
    return packet
